# dynotui

./: Cargo.toml
.config/: config.json5
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  constants.rs  data.rs  main.rs  message.rs  util.rs
src/components/: collections_box.rs  data_box.rs  data_detail_box.rs  filter_input.rs  loading.rs  region_box.rs  status_text.rs
