[package]
name = "dynotui"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.9"
aws-sdk-dynamodb = "1.52.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
throbber-widgets-tui = "0.8.0"
anyhow = "1.0.92"
